# boostio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  boostio.lua  run_cmake.sh  run_cmake_wasm.sh
examples/: another_one.json  iknows.json  nes_drum.json  nes_drum2.json  new_jam.json  new_song.json  notes.json  puzzle_attack_theme.json  puzzle_attack_theme_a.json  puzzle_attack_theme_b.json  puzzle_attack_theme_c.json  riff.json
lua/commands/: edit.lua  file.lua  grid.lua  init.lua  playback.lua  toast_test.lua  transform.lua  view.lua
lua/config/: config.lua  init.lua  keybindings.lua  theme.lua
lua/plugins/: advanced_audio_test.lua  audio_test.lua  draw_test.lua  fps_display.lua  instrument_selector.lua  piano_roll.lua  playback_controls.lua  save_test.lua  splash_screen.lua  statusline.lua  test.lua  test_commands.lua  toast.lua  voice_controls.lua  voice_validation.lua
lua/plugins/piano_roll/: init.lua  mouse_handlers.lua  note_operations.lua  rendering.lua  state.lua  utils.lua
msdf-atlas-gen/: CMakeLists.txt  atlas_wrapper.cpp  atlas_wrapper.h  msdfgen-config.h
scripts/: copy_lua.sh
src/: main.c
src/app/: app_controller.c  app_controller.h  app_state.c  app_state.h  lua_command_registry.c  lua_command_registry.h  lua_service.c  lua_service.h  viewport_utils.c  viewport_utils.h
src/app/ui/: piano_roll.c  piano_roll.h
src/app/ui_components/: button.c  button.h
src/core/audio/: audio.c  audio.h  c_exporter.c  c_exporter.h  scale.c  scale.h  sequencer.c  sequencer.h  song_loader.c  song_loader.h  song_saver.c  song_saver.h  synth.c  synth.h  wav_exporter.c  wav_exporter.h
src/core/graphics/: color.h  graphics.c  graphics.h  msdf_atlas.c  msdf_atlas.h  primitive_buffer.c  primitive_buffer.h  shader.c  shader.h  window.c  window.h
src/core/input/: input_handler.c  input_handler.h  input_mapper.c  input_mapper.h  input_types.h
src/core/lua/: lua_api.c  lua_api.h  lua_runtime.c  lua_runtime.h
src/core/platform/: path_utils.c  path_utils.h  platform.c  platform.h
src/core/theme/: theme.c  theme.h
src/core/undo/: command_history.c  command_history.h
